// $Id$

PHPMailer 6.x-3.x, xxxx-xx-xx
-----------------------------
by smk-ka: Improved installation and status report page error message in case
 the PHPMailer library is missing.
by smk-ka: Improved integration with Mime Mail.
by smk-ka: Removed bogus call to hook_mail_alter() from phpmailer_preview().
by smk-ka: Display a warning message if PHPMailer is disabled.


PHPMailer 6.x-3.0, 2010-07-07
-----------------------------
#642138 by Zoltok, sun, smk-ka: Fixed wrong path to class.smtp.php.
#563112 by markus_petrux: Added support for Libraries API.
by smk-ka: Improved error handling.
by smk-ka: Fixed PHP warning on Mime Mail settings page.
by smk-ka: Improved usability: provide next steps during installation.
#634868 by smk-ka: Fixed bad e-mail addresses in sent mails if display names
 contains a comma.
#491658 by a_c_m, smk-ka: Setting FromName also for Mime Mail messages.
#499824, #551004 by smk-ka: Added support for PHPMailer's exception handling
 to avoid dumping errors to the browser (since 5.0.0).
#516450 by smk-ka: Fixed test mail cannot be sent at the same time as enabling
 PHPMailer.
by smk-ka: Cleaned up Mime Mail integration. Ported the HTML e-mail preview to
 D6.
by smk-ka: Disabling the module now resets the smtp_library and mimemail_engine
 variables, to avoid a WSOD.
by smk-ka: Checking requirements before allowing to install the module.
by smk-ka: Documentation updates.
by smk-ka: Fixed PHPMailer settings not saved when used as Mime Mail engine.
by smk-ka: Fixed Admin Menu not visible anymore.
by smk-ka: Regression: Fixed not being able to enable either Mime Mail or
 PHPMailer for e-mail delivery.
by smk-ka: Moved resetting email properties to DrupalPHPMailer::SmtpSend().
by smk-ka: Provide more user-friendly error messages.
#607204 by smk-ka: Added support for Reply-To headers.
#633278 by smk-ka: Increased security: added an option to hide the password on
 the settings page and added a log message if the configuration changed.